bulk import data from .fit folder
